# mikcar

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.all  LICENSE  README.md  cliff.toml  deny.toml  docker-compose.yml  release-please-config.json
.cargo/: audit.toml  config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docker/grafana/dashboards/: mik.json
docker/grafana/provisioning/dashboards/: dashboard.yml
docker/prometheus/: prometheus.yml
docs/: BUILDING-COMPONENTS.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
src/: auth.rs  builder.rs  email.rs  error.rs  health.rs  kv.rs  lib.rs  main.rs  otlp.rs  queue.rs  secrets.rs  sql.rs  storage.rs
tests/: email_integration.rs  queue_integration.rs
